﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$HeadURL$

2007-01-18 Michal Čihař  <michal@cihar.com>
    * lang/czech: Updated.

2007-01-17 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/turkish: update, thanks to Burak Yavuz - bourock

2007-01-16 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.9.2 released from QA_2_9

2007-01-12 Marc Delisle  <lem9@users.sourceforge.net>
    * (many files): Designer, two features (snap to grid / display field)
      thanks to Ivan Kirillov
    * libraries/Theme_Manager.class.php: patch #1611684, force a change
      of a session variable to avoid phpmyadmin.css.php caching problems,
      thanks to Christian Schmidt

2007-01-11 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/estonian: Update, thanks to Marko Ellermaa - uhuu

2007-01-09 Michal Čihař  <michal@cihar.com>
    * index.php: Properly escape strings written in JS code.
    * libraries/Theme_Manager.class.php: Avoid trigger error here, parameter
      comes from user and it might lead to path disclossure.
    * libraries/common.lib.php:
        - Properly escape </script> in JS code.
        - Check db, table and sql_query params to be string.

2007-01-08 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/session.inc.php: prevent attack on session name cookie

2007-01-05 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/session.inc.php: bug #1538132, remove the setting of
      session.save_handler to 'files'
    * pmd_general.php: patch #1627831,
      English language improvements, thanks to Isaac Bennetch
    * pmd_general.php, pmd_relation_new.php, lang/*: abstract messages 

2007-01-04 Marc Delisle  <lem9@users.sourceforge.net>
    * pmd/scripts/move.js: avoid text selection when moving a table object
      under MSIE 6, thanks to Ivan Kirillov
    * libraries/db_links.inc.php: better icon for Designer, thanks to I.K.

2007-01-02 Marc Delisle  <lem9@users.sourceforge.net>